updated all eocfm files
-updated all eocfm files
-if a eocfm file has a different name in gbfm than the original name has been added in comment
-replaced 'eocfm_button.gui' and 'eocfm_main.gui' with 'eocfm_widgets.gui' the difference is that 'eocfm_widgets.gui' takes advantage of CFM.
-added 'balkfm_com_ideologies.txt' to add the eocfm sidebar button as described in the CFM README
-updated all other relevant files to have eocfm use CFM properly

--- a/localization/english/eocfm_l_english.yml
+++ b/localization/english/eocfm_l_english.yml
@@ -27,6 +27,7 @@
  
  # tooltips
  eocfm_unite_romania_tt: "We have #bold United the Principalities#!"
+ eocfm_orthodox_realms_warning_tt: "Should they manage to claim all the #tooltippable #tooltip:[GetRawTextTooltipTag('eocfm_east_patriarchal_seats_tt')] Eastern Patriarchates#!#, they will be able to form the #bold Orthodox Commonwealth#!"
  
  eocfm_commission_icon_tt1: "We do not have an active #bold Icon Modifier#!."
  eocfm_commission_icon_tt2: "We are not in the process of Selecting an Icon."
@@ -36,7 +37,9 @@
  eocfm_convoke_council_tt1: "There have been less than #variable 4#! councils."
  eocfm_convoke_council_tt2: "There is a #tooltippable #tooltip:[GetRawTextTooltipTag('je_eocfm_convoke_council_tt')] Theologial Matter#!#! calling the Church's attention."
  eocfm_convoke_council_tt3: "An Ecumenical Council is not currently being held."
- je_eocfm_convoke_council_tt: "•Reply to the Epistle to the Easterners (requires #yellow Mass Communication#!).\n•Settle the issue of Phyletism (requires #yellow Nationalism#!).\n•Reform the Julian Calendar (requires #yellow Central Planning#!).\n•Revive the [Concept('concept_crusades','$concept_crusades$')] (must have #bold Restored the Byzantine Empire#!)."
+ je_eocfm_convoke_council_tt: "•Reply to the Epistle to the Easterners (requires #yellow Mass Communication#!).\n•Settle the issue of Phyletism (requires #yellow Nationalism#!).\n•Reform the Julian Calendar (requires #yellow Central Planning#!).\n•Revive the [Concept('concept_crusades','$concept_crusades$')] (must have #bold Restored the Byzantine Empire#!)\n•Declare the #tooltippable #tooltip:[GetRawTextTooltipTag('eocfm_orthodox_realms_tt')] Orthodox Commonwealth#!#!."
+ eocfm_orthodox_realms_tt: "To declare the Orthodox Commonwealth:\n•Must be [Concept('concept_autocephaly','$concept_autocephalous$')]\n•Must control one of the #tooltippable #tooltip:[GetRawTextTooltipTag('eocfm_east_patriarchal_seats_tt')] Eastern Patriarchates#!#!\n•Must be a [concept_great_power]"
+ 
  
  eocfm_need_100_tt: "Has #blue 100#! @eocfm_caesaropapism! [concept_caesaropapism]."
  eocfm_need_200_tt: "Has #blue 200#! @eocfm_caesaropapism! [concept_caesaropapism]."
@@ -596,7 +599,8 @@
  custom_eocfm_moscow: "#yellow Moscow#!"
  
  # GUI Button
- eocfm_gui_main_button: "#bold The Orthodox Church#!\n@eocfm_caesaropapism! Balance: #bold #greece [GetPlayer.MakeScope.ScriptValue('eocfm_caesaropapism_capacity_value')]#!#!"
+ eocfm_sidebar_button_sgui: "eocfm_sidebar_button_sgui"
+ eocfm_sidebar_button_sgui_desc: "#bold The Orthodox Church#!"
  
  # GUI Top Bar
  eocfm_gui_main_title: "The Eastern Orthodox Church"
