added goedendag event
-added a goedendag event which will kill the HRE emperor if Paris is controlled by Flanders

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -498,6 +498,12 @@
  princely_league_completion.2.a: "Intersting."
  princely_league_completion.2.f: "After a long struggle The Princely League has failed and is being disbanded."
 
+ #capture_paris_events (goedendag)
+ br_goeiendag.1.t: "Goedendag"
+ br_goeiendag.1.d: "The door of royal bedroom slams open, terrified the emperor stumbels backwards, but it is already to late the last words the emperor hears as his skull is split open is just one word 'Goedendag'."
+ br_goeiendag.1.f: "With Paris in the hands of the Flemish, the Flemish soldiers have now surrounded the imperial palace, any chance to flee is long gone. For a while the imperial guards offer fierce resistance, but it is futile they are overwhelmed by the Flemish soldiers and soon they make there way into the palace. They eventually find the emperor hiding in his chambers, having locked the door. But the Flemish had come prepared, with them they had brought an infamous weapon form their home region, the 'Goedendag' a crude but effective weapon, with which they had centuries before massacred the HRE cavalry at 'The battle of the guldensporen', but now they use it to break open the doors of the royal chambers. Upon forcing there way inside they found the emperor cowering in fear of his impending fate. In this moment one soldier decided to take the initiative and walked forward upto the emperor, lifting his weapon and then suddenly striking it forward while ceremoniously proclaiming 'Goedendag' (Flemish for Good Day). "
+ br_goeiendag.1.a: "Goedendag"
+
  #request_east_indies_unification
  request_east_indies_unification.1.t: "East Indies Unification"
  request_east_indies_unification.1.d: "The Ostend Company request that we unify our East Indies holdings under them."
