--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -21,8 +21,11 @@
  ig_boyars: "Boyars"
  ig_boyars_desc: "#lore The old nobility.#!"
  ig_szlachta: "Szlachta"
+ ig_szlachta_desc: "The Polish name for the traditional landowning nobility. The Szlachta, thanks to the Sejm and the Liberum Veto hold a large portion of the Commonwealth’s power. If any reforms are to be done, one must gain either their support or weaken their power.!"
  ig_mieszczanie: "Mieszczanie"
+ ig_mieszczanie_desc: "The Polish name for the Burghers, or city-folk, of the Commonwealth. The Mieszczanie is mostly made up of the small business owners of the Nation. Thanks to the changing times, they have gained more political clout compared to the Middle Ages!"
  ig_soltys: "Soltys"
+ ig_soltys_desc: "Originally just the term used for a headman of a village, Soltys has expanded as a term for the peasantry and rural folk as a whole. In many ways this is thanks to the aftermath of the Great Plague, where due to the shortage of labor, landowners had to pay their workers more causing early social mobility. The Soltys seek to keep that trend going in this age of progress.!"
  ig_kurultai: "Kurultai"
  ig_great_khan_restorationists: "Great Khan Restorationists"
  ig_steppe_nomads: "Steppe Nomads"
