--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -109,6 +109,7 @@
  br_modifier_plc_army: "Armia Koronna"
  br_modifier_hun_army: "Fekete sereg"
  br_modifier_hussite_legacy: "Hussite Legacy"
+ br_modifier_winged_hussars: "Winged Hussars"
 
 
  #HRE
