--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -4,7 +4,7 @@
  #purple Purples#!
  romaioi_startup_events.1.t: "Welcome to #P Basileía Romaíon#!"
  romaioi_startup_events.1.d: "Welcome to #P Basileía Romaíon 1736#! - A Sprawling Alt-History Odyssey!"
- romaioi_startup_events.1.f: "Welcome to an alternative world one hundred years earlier than base Victoria 3 where many divergent events led to a drastically different world. Primarily inspired by Roman, Medieval and Renaissance History. Join our #blue Discord#! community, show your support by rating us on #gold Steam#! and #gold PDX mods#!, and consider contributing on #green Patreon.com/romaioi#! or #green BuyMeACoffee.com/romaioi#!."
+ romaioi_startup_events.1.f: "Welcome to an alternative world one hundred years earlier than base Victoria 3 where many divergent events led to a drastically different world. Primarily inspired by Roman, Medieval and Renaissance History. Combined with game-play focused on realistic simulation and balance inspired by the great Victoria 2 mods as well as Project Caesar/EU5. Join our #blue Discord#! community, show your support by rating us on #gold Steam#! and #gold PDX mods#!, and consider contributing on #green Patreon.com/romaioi#! or #green BuyMeACoffee.com/romaioi#!."
  romaioi_startup_events.1.a: "#BOLD;p Play the Game#!"
  romaioi_startup_events.1.b: "Discover Lore."
  romaioi_startup_events.1.c: "Support Development."
@@ -17,7 +17,7 @@
 
  romaioi_startup_events.3.t: "Development of #P Basileía Romaíon#!"
  romaioi_startup_events.3.d: "Support the development of #P Basileía Romaíon#!"
- romaioi_startup_events.3.f: "If you're interested in contributing your skills, we invite you to join our development team! Message #gold Drogan#! on Discord to learn more about how you can help make Basileía Romaíon even better. #BOLD;p Mod Team:#! #P Creator#!: #gold Drogan#!, #P Developers#!: #gold Smekens#!, #gold Digital_Cake#!, #gold Skjargh#!, #P Creative Support#!: #gold Jozue#!, Special Thanks: To everyone who has contributed, from reporting bugs to providing feedback, suggestions, and ideas. Your support has been invaluable! You can back our work at #green www.buymeacoffee.com/Romaioi#! or consider becoming a Patron at #green www.patreon.com/romaioi#!"
+ romaioi_startup_events.3.f: "If you're interested in contributing your skills, we invite you to join our development team! Message #gold Drogan#! on Discord to learn more about how you can help make Basileía Romaíon even better. #BOLD;p Mod Team:#! #P Creator#!: #gold Drogan#!, #P Developers#!: #gold Smekens#!, #gold Alexedishi#! #gold Digital_Cake#!, #gold Skjargh#!, #P Creative Support#!: #gold Jozue#!, Special Thanks: To everyone who has contributed, from reporting bugs to providing feedback, suggestions, and ideas. Your support has been invaluable! You can back our work at #green www.buymeacoffee.com/Romaioi#! or consider becoming a Patron at #green www.patreon.com/romaioi#!"
  romaioi_startup_events.3.a: "#BOLD;p Play the Game#!"
 
  #serbia_rebellion.1.t: "Serbian Exarchate declares independence"
@@ -355,11 +355,22 @@
  br_balkan_revolt.15.dd: "Don't interfere."
 
  br_balkan_revolt.16.t: "Assassination of a Local Governor"
- br_balkan_revolt.16.d: "Dire news from the Balkans! An Boulgaroí officer of the state with secret sympathy with the resistance has assassinated the local governor in one of our balkan states. This assassination has encouraged more violence from the Bulgarians."
- br_balkan_revolt.16.f: "After the assassination, the murderer was immediately caught by security forces. The murderer tried to encourage the Bulgarian people by shouting “Long live Bulgaria”. The murderer was taken to the square and executed. The Boulgaroí people protested this execution, but the murderer was shot by 12 Romaioi soldiers in front of the people. A group that attempted to prevent the execution was then executed alongside the traitor."
+ br_balkan_revolt.16.d: "Dire news from the Balkans! An Boulgaroí officer of the state with secret sympathy with the resistance has assassinated the local governor in one of our balkan states. This assassination has encouraged more violence from the Boulgaroí."
+ br_balkan_revolt.16.f: "After the assassination, the murderer was immediately caught by security forces. The murderer tried to encourage the Boulgaroí people by shouting “Long live Bulgaria”. The murderer was taken to the square and executed. The Boulgaroí people protested this execution, but the murderer was shot by 12 Romaioi soldiers in front of the people. A group that attempted to prevent the execution was then executed alongside the traitor."
  br_balkan_revolt.16.a: "They will pay for this!"
  br_balkan_revolt.16.b: "One murderer cannot represent all Boulgaroí!"
 
+ balkan_kerfuffle.1.t: "AI Event"
+ balkan_kerfuffle.1.d: "AI Event"
+ balkan_kerfuffle.1.f: "AI Event"
+ balkan_kerfuffle.1.a: "AI Event"
+ balkan_kerfuffle.1.b: "AI Event"
+
+ balkan_kerfuffle.2.t: "Chaos in the Balkans"  
+ balkan_kerfuffle.2.d: "A local border conflict is escalating."  
+ balkan_kerfuffle.2.f: "A regional conflict within the breakaway Exarchate of Serbia has drawn the attention of our loyal Exarchos of Paristrion. Seizing the opportunity, he has intervened directly, aiming to expand his realm's borders."  
+ balkan_kerfuffle.2.a: "Support the Paristrion Exarchate in its rightful claim."  
+ balkan_kerfuffle.2.b: "Refrain from direct involvement."
 
  #HRE
  #revolution events
