--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -39,6 +39,7 @@
  br_modifier_anti_colonialism: "Anti-Colonialism"
  br_modifier_defensive_bonus: "Defensive Military"
  br_modifier_aggressive_bonus: "Aggressive Military"
+ br_modifier_regionalized_navy: "Regionalized Navy"
 
  #Colonial
  br_modifier_elysium: "Elysium"
