--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -797,7 +797,7 @@
  HUB_NAME_STATE_BESSARABIA_wood: "Beltsy" 
 
  #Russia
- HUB_NAME_STATE_INGRIA_city: "St Petersburg" 
+ HUB_NAME_STATE_INGRIA_city: "Nyenschantz" 
  HUB_NAME_STATE_INGRIA_port: "Kronstadt" 
  HUB_NAME_STATE_INGRIA_mine: "Shlisselburg" 
  HUB_NAME_STATE_INGRIA_farm: "Yamburg" 
