BR specific localization edits
- Updated the localization by replacing and references of Ottomans the Sultan, fall of Constantinople etc.

--- a/localization/english/eocfm_l_english.yml
+++ b/localization/english/eocfm_l_english.yml
@@ -266,8 +266,8 @@
  
  modifier_eocfm_controls_rome: "Controls Seat of Rome"
  modifier_eocfm_controls_rome_desc: "Controls Seat of Rome"
- modifier_eocfm_controls_constantinople: "Controls Seat of Constantinople"
- modifier_eocfm_controls_constantinople_desc: "Controls Seat of Constantinople"
+ modifier_eocfm_controls_constantinople: "Controls Seat of Kōnstantinoúpolis"
+ modifier_eocfm_controls_constantinople_desc: "Controls Seat of Kōnstantinoúpolis"
  modifier_eocfm_controls_antioch: "Controls Seat of Antioch"
  modifier_eocfm_controls_antioch_desc: "Controls Seat of Antioch"
  modifier_eocfm_controls_alexandria: "Controls Seat of Alexandria"
@@ -279,8 +279,8 @@
  
  modifier_eocfm_swaying_rome: "Swaying Rome"
  modifier_eocfm_swaying_rome_desc: "Swaying Rome"
- modifier_eocfm_swaying_constantinople: "Swaying Constantinople"
- modifier_eocfm_swaying_constantinople_desc: "Swaying Constantinople"
+ modifier_eocfm_swaying_constantinople: "Swaying Kōnstantinoúpolis"
+ modifier_eocfm_swaying_constantinople_desc: "Swaying Kōnstantinoúpolis"
  modifier_eocfm_swaying_antioch: "Swaying Antioch"
  modifier_eocfm_swaying_antioch_desc: "Swaying Antioch"
  modifier_eocfm_swaying_jerusalem: "Swaying Jerusalem"
@@ -292,8 +292,8 @@
  
  modifier_eocfm_rome_blessing: "Blessings of Rome"
  modifier_eocfm_rome_blessing_desc: "Blessings of Rome"
- modifier_eocfm_constantinople_blessing: "Blessings of Constantinople"
- modifier_eocfm_constantinople_blessing_desc: "Blessings of Constantinople"
+ modifier_eocfm_constantinople_blessing: "Blessings of Kōnstantinoúpolis"
+ modifier_eocfm_constantinople_blessing_desc: "Blessings of Kōnstantinoúpolis"
  modifier_eocfm_antioch_blessing: "Blessings of Antioch"
  modifier_eocfm_antioch_blessing_desc: "Blessings of Antioch"
  modifier_eocfm_jerusalem_blessing: "Blessings of Jerusalem"
@@ -305,8 +305,8 @@
  
  modifier_eocfm_condemned_by_rome: "Condemned by Rome"
  modifier_eocfm_condemned_by_rome_desc: "Condemned by Rome"
- modifier_eocfm_condemned_by_constantinople: "Condemned by Constantinople"
- modifier_eocfm_condemned_by_constantinople_desc: "Condemned by Constantinople"
+ modifier_eocfm_condemned_by_constantinople: "Condemned by Kōnstantinoúpolis"
+ modifier_eocfm_condemned_by_constantinople_desc: "Condemned by Kōnstantinoúpolis"
  modifier_eocfm_condemned_by_antioch: "Condemned by Antioch"
  modifier_eocfm_condemned_by_antioch_desc: "Condemned by Antioch"
  modifier_eocfm_condemned_by_jerusalem: "Condemned by Jerusalem"
