--- a/localization/english/replace/br_eocfm_l_english.yml
+++ b/localization/english/replace/br_eocfm_l_english.yml
@@ -35,6 +35,9 @@
  eocfm.188.d: "[SCOPE.sCharacter('eocfm_denouncing_agitator_scope').GetFullName], a staunch advocate for the supremacy of the Church, has denounced the [ROOT.GetCountry.GetAdjectiveNoFlag] state in its intent to seize control of the Church from Kōnstantinoúpolis. Supporters of [concept_autocephaly] have demanded that his future speaking events be cancelled."
  eocfm.189.d: "Several shots rang out in [ROOT.GetCountry.GetCapital.GetCityHubName] as a prominent member of the [GetInterestGroupVariant('ig_devout',GetPlayer).GetNameWithCountryVariant] was assassinated for openly endorsing the schism from Kōnstantinoúpolis. Politicians and bishops alike have demanded increased protections for the clergy."
  
+ # building loc replacement
+ eocfm_building_patriarchate_constantinople: "Ecumenical Patriarchate of Kōnstantinoúpolis"
+ 
  # modifier loc replacement
  modifier_eocfm_controls_constantinople: "Controls Seat of Kōnstantinoúpolis"
  modifier_eocfm_controls_constantinople_desc: "Controls Seat of Kōnstantinoúpolis"
@@ -44,3 +47,6 @@
  modifier_eocfm_constantinople_blessing_desc: "Blessings of Kōnstantinoúpolis"
  modifier_eocfm_condemned_by_constantinople: "Condemned by Kōnstantinoúpolis"
  modifier_eocfm_condemned_by_constantinople_desc: "Condemned by Kōnstantinoúpolis"
+ 
+ # tooltip loc replacement
+ eocfm_constantinople: "@eocfm_patriarchate! #bold #yellow #tooltip:[GetRawTextTooltipTag('eocfm_constantinople_details')] Kōnstantinoúpolis#!#!#!"
