--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -26,7 +26,9 @@
  pm_default_building_masjid_al_haram: "Great Mosque of Mecca"
 
  br_pmg_base_building_great_palace: "Méga Palátion"
- br_pm_default_building_great_palace: "Palace Complex"
+ br_pm_building_great_palace_active: "Palace Complex"
+ br_pm_building_great_palace_inactive: "Inactive Palace Complex"
+ br_pmg_administration_great_palace: "Administration"
  br_pm_aristocratic_building_great_palace: "Aristocratic Administration"
  br_pm_bureaucrat_building_great_palace: "Bureaucratic Administration"
  br_pmg_guard_house_great_palace: "Guard Units"
@@ -40,7 +42,6 @@
 
   # buildings
  gbbf_building_corinth_canal: "Corinth Canal"
- gbbf_building_castelul_peles: "Castelul Peleș"
  gbbf_building_karadag_roads: "Mountain Roadways"
  
  ### pm groups
@@ -52,7 +53,6 @@
  pmg_gbbf_karadag_roads: "Road Surfacing"
  pmg_gbbf_karadag_transportation: "Mode of Transport"
  pmg_gbbf_karadag_administration: "Administrative System"
- pmg_gbbf_castelul_peles: "Castelul Peleș"
  
  ### production methods
  pm_gbbf_corinth_canal: "Corinth Canal"
@@ -77,7 +77,6 @@
  pm_gbbf_motor_cars: "Motor Cars"
  pm_gbbf_clerical_administration: "Clerical Administration"
  pm_gbbf_secular_administration: "Secular Administration"
- pm_gbbf_castelul_peles: "Castelul Peleș"
 
  # Horses
  pmg_horse_ranch: "Horse Ranch"
