--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -12,6 +12,7 @@
  br_pm_default_building_jerusalem: "Jerusalem"
  br_pmg_base_building_hippodrome: "Hippodrome"
  br_pm_default_building_hippodrome: "Hippodrome"
+ br_pm_inactive_building_hippodrome: "Inactive Hippodrome"
  br_pmg_base_building_great_port: "Great Port"
  br_pm_default_building_great_port: "Great Port"
  br_pmg_base_building_university_constantinople: "University of Konstantinople"
@@ -28,6 +29,7 @@
  br_pmg_base_building_great_palace: "Méga Palátion"
  br_pm_building_great_palace_active: "Palace Complex"
  br_pm_building_great_palace_inactive: "Inactive Palace Complex"
+ br_pm_museum_building_great_palace: "Museum"
  br_pmg_administration_great_palace: "Administration"
  br_pm_aristocratic_building_great_palace: "Aristocratic Administration"
  br_pm_bureaucrat_building_great_palace: "Bureaucratic Administration"
@@ -35,12 +37,15 @@
  br_pm_default_guard_house: "Guard Units"
  br_pm_improved_guard_house: "Improved Guard Units"
  br_pm_elite_guard_house: "Elite Guard Units"
+ br_pm_museum_guard_house: "Museum Security"
 
  br_pmg_base_building_palace_complex: "Palace Complex"
  br_pm_bureaucrat_building_palace_complex: "Bureaucratic Administration"
  br_pm_default_building_palace_complex: "Aristocratic Administration"
 
-  # buildings
+ ### GBBF Additions ####
+
+ ### buildings
  gbbf_building_corinth_canal: "Corinth Canal"
  gbbf_building_karadag_roads: "Mountain Roadways"
  
@@ -49,7 +54,6 @@
  pmg_gbbf_racing_roster: "Racing Roster"
  pmg_gbbf_chariot_construction: "Chariot Construction"
  pmg_gbbf_track_amenities: "Track Amenities"
- pmg_gbbf_palaia_anaktora: "Palaiá Anáktora"
  pmg_gbbf_karadag_roads: "Road Surfacing"
  pmg_gbbf_karadag_transportation: "Mode of Transport"
  pmg_gbbf_karadag_administration: "Administrative System"
@@ -67,7 +71,6 @@
  pm_gbbf_basic_amenities: "Basic Amenities"
  pm_gbbf_adequate_amenities: "Adequate Amenities"
  pm_gbbf_grandiose_amenities: "Grandiose Amenities"
- pm_gbbf_palaia_anaktora: "Palaiá Anáktora"
  pm_gbbf_unpaved_roads: "Unpaved Roads"
  pm_gbbf_plank_roads: "Plank Roads"
  pm_gbbf_asphalt_roads: "Asphalt Roads"
