--- a/localization/english/replace/br_eocfm_l_english.yml
+++ b/localization/english/replace/br_eocfm_l_english.yml
@@ -50,3 +50,12 @@
  
  # tooltip loc replacement
  eocfm_constantinople: "@eocfm_patriarchate! #bold #yellow #tooltip:[GetRawTextTooltipTag('eocfm_constantinople_details')] Kōnstantinoúpolis#!#!#!"
+
+ # buildings
+ eocfm_building_masjid_al_haram: "Great Mosque of Mecca"
+ eocfm_building_patriarchate_constantinople: "Ecumenical Patriarchate of Constantinople"
+ eocfm_building_patriarchate_antioch: "Patriarchate of Antioch"
+ eocfm_building_patriarchate_jerusalem: "Patriarchate of Jerusalem"
+ eocfm_building_patriarchate_alexandria: "Patriarchate of Alexandria"
+ eocfm_building_patriarchate_rome: "Patriarchate of the West"
+ eocfm_building_patriarchate_moscow: "Russian Orthodox Church"
