--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -105,8 +105,8 @@
  remove_cossacks: "Remove Cossack Autonomy"
  remove_cossacks_desc: "Cossacks have been allowed local autonomy, this no longer aligns with our interests."
 
- chariot_racing_decision: "Re-establish Chariot Racing"
- chariot_racing_decision_desc: "Chariot racing stands as one of the most ancient and revered traditions in the Mediterranean's rich historical tapestry. With the restoration of the Hippodrome, we have the opportunity to breathe new life into this cherished sport, rekindling the very essence of Romaion athletic prowess and entertainment that has endured through the ages."
+ chariot_racing_decision: "State Sponsored Chariot Racing"
+ chariot_racing_decision_desc: "Chariot racing stands as one of the most ancient and revered traditions in the Mediterranean's rich historical tapestry. We have the opportunity to breathe new life into this cherished sport, rekindling the very essence of Romaion athletic prowess and entertainment that has endured through the ages."
  expand_chariot_racing_decision: "Expand Chariot Racing"
  expand_chariot_racing_decision_desc: "With chariot racing becoming all the rage in the Empire, there are calls to expand the chariot racing teams to include the six original teams of the Roman Empire."
 
