Flavor Text for Russian Tags
-Unique flavor text for Novgorod and Muscovy.
-Semi-unique flavor text for Smolensk, Ryazan, Tver, Yaroslavl, and Nizhny Novgorod.
-Adjusted flavor text for the centralized American Natives.

--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -65,13 +65,25 @@
  
   # Eastern Europe
    PLC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_novgorod_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   PRU_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_novgorod_FLAVOR_TEXT: "Forgotten in the far North, the Republic of Novgorod bides it's time to finally break free from Swedish rule. But Novgorod isn't the only Russian state that's looking towards freedom. Can Novgorod break free and stomp out the Rurkid family before it's too late? Or are they destined to join the Russian Princes in gilded cages?"
+   br_polotsk_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_pskov_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_turov_pinsk_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_kiev_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_chernigov_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_smolensk_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Smolensk finally sees it's chance for freedom. With Tartaria in decline, Muscovy will be vulnerable to us breaking free. United with the other princes, they may even be able to stand against Muscovy, but if they remain divided, they will all fall to Moscow."
+   br_tver_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Tver finally sees it's chance for freedom. With Tartaria in decline, Muscovy will be vulnerable to us breaking free. United with the other princes, they may even be able to stand against Muscovy, but if they remain divided, they will all fall to Moscow."
+   br_yaroslavl_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Yaroslavl finally sees it's chance for freedom. With Tartaria in decline, Muscovy will be vulnerable to us breaking free. United with the other princes, they may even be able to stand against Muscovy, but if they remain divided, they will all fall to Moscow."
+   br_nizhny_novgorod_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Nizhny Novgorod finally sees it's chance for freedom. With Tartaria in decline, Muscovy will be vulnerable to us breaking free. United with the other princes, they may even be able to stand against Muscovy, but if they remain divided, they will all fall to Moscow."
+   br_ryazan_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Ryazan finally sees it's chance for freedom. With Tartaria in decline, Muscovy will be vulnerable to us breaking free. United with the other princes, they may even be able to stand against Muscovy, but if they remain divided, they will all fall to Moscow."
+   PRM_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    UBD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    MOL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_blacksea_colonies_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_tartaria_FLAVOR_TEXT: "Tartaria is a relic of a bygone era. Despite it's large military the state that runs it is rotten to the core. Slavery, corruption, and incompentcy runs rampanet in the horde brought to it's knees by the expansion East. The Commonwealth and it's subjects look to expand into Ukraine, while our puppet Duke in Muscovy is distancing themselves. Vultures circle over head, but Tartaria is not yet lost... right?"
-   br_muscovy_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-    
+   br_muscovy_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Muscovy finally sees it's chance for freedom. With Tartaria in decline, the Rurkid dynasty is poised to dominate their neighboring princes. United, they may even be able to stand against the Commonwealth, but if they remain divided, the only thing that will change is their master."
+   br_taurica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   # Iberia
    ANL_FLAVOR_TEXT: "With the HRE-backed Iberian states looking to reconquer lost territories and being surrounded by hostile powers in the North and East, the storm clouds gather. Can Al-Andalus leverage it's colonial empire to defend against the Christian powers or will they be destroyed by their own vassals?"
    CAS_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
@@ -149,15 +161,15 @@
   
   # South and Central America
    br_new_angland_FLAVOR_TEXT: "Ruled by the Godwinson family, the last true rulers of Britannia after their failed revolt in the 17th century. They grow their strength in the furtile valleys of South America, attracting settlers from the Isles. With the increasing power, their rulers are starting to grow homesick..."
-   TWT_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas stand united. Can Tawantinsuyu modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
+   TWT_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the North and the West, the natives of the Americas must stand united. Can Tawantinsuyu modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
    br_antarctique_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_dutch_west_indies_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_klein_venedig_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_new_granada_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   MAY_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas stand united. Can Maya modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
-   NAH_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas stand united. Can Aztlán modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
-   PUE_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas stand united. Can Pueblo modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
-   CAH_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas stand united. Can Pueblo modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
+   MAY_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas must stand united. Can Maya modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
+   NAH_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas must stand united. Can Aztlán modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
+   PUE_FLAVOR_TEXT: "Surrounded by hostile colonial powers from the East and the West, the natives of the Americas must stand united. Can Pueblo modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
+   CAH_FLAVOR_TEXT: "Surrounded by hostile colonial powers from all sides, the natives of the Americas must stand united. Can Cahokia modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
    br_atlantica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_giamaica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    
