--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -14,9 +14,9 @@
    TID_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    DEI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    PHI_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_new_holland_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_australis_FLAVOR_TEXT: "A strange land seen as a punishment by some, and a chance for a new life by others. A vanity project by elites in Aigyptios and the Patriarchate of Alexandria, the colony is exploited for all it's worth without regard for the native populations. Australis has to compete with New Holland for dominance over the land down under, who will succeed? And will their people ever truly be free?"
-   
+   br_new_holland_FLAVOR_TEXT: "A strange land seen as a punishment by some, and a chance for a new life by others. A prison for the undesirables of the Netherlands, the colony is underfunded and underpopulated compared to it's neighbors. Nieuw Holland has to compete with Antipódeia for dominance over the land down under, who will succeed? And will their people ever truly be free?"
+   br_australis_FLAVOR_TEXT: "A strange land seen as a punishment by some, and a chance for a new life by others. A vanity project by elites in Aigyptios and the Patriarchate of Alexandria, the colony is exploited for all it's worth without regard for the native populations. Antipódeia has to compete with Nieuw Holland for dominance over the land down under, who will succeed? And will their people ever truly be free?"
+   EOC_FLAVOR_TEXT: "With their unique holdings across Asia, Africa, and the Americas, the Ostend Company represents the HRE on the global stage. Being the only lands the HRE holds that can grow Tea, Spices, Dyes and Opium, they have a complete monopoly on all cash crops into the HRE's markets. The heavy plantation focus has it's downsides, with it's people constantly starving."
    
   # Balkans
    SER_FLAVOR_TEXT: "Serbia has fought hard for its independence, and will surely have to continue its struggle to retain it. Wedged between great powers, will Serbia become the powder keg of Europe?"
@@ -84,6 +84,7 @@
    br_tartaria_FLAVOR_TEXT: "Tartaria is a relic of a bygone era. Despite it's large military the state that runs it is rotten to the core. Slavery, corruption, and incompentcy runs rampanet in the horde brought to it's knees by the expansion East. The Commonwealth and it's subjects look to expand into Ukraine, while our puppet Duke in Muscovy is distancing themselves. Vultures circle over head, but Tartaria is not yet lost... right?"
    br_muscovy_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Muscovy finally sees it's chance for freedom. With Tartaria in decline, the Rurkid dynasty is poised to dominate their neighboring princes. United, they may even be able to stand against the Commonwealth, but if they remain divided, the only thing that will change is their master."
    br_taurica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   
   # Iberia
    ANL_FLAVOR_TEXT: "With the HRE-backed Iberian states looking to reconquer lost territories and being surrounded by hostile powers in the North and East, the storm clouds gather. Can Al-Andalus leverage it's colonial empire to defend against the Christian powers or will they be destroyed by their own vassals?"
    CAS_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
@@ -114,10 +115,12 @@
    BRN_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
    HAR_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
    AWS_FLAVOR_TEXT: "$TGR_FLAVOR_TEXT$"
-   SAF_FLAVOR_TEXT: "Originally a Dutch trading post."
+   SAF_FLAVOR_TEXT: "Originally just a Dutch trading post, the colony hosts many former Dutch East Indies employees and their familes. With fertile lands along the coast and prime grazing lands inland, the colony produces a surplus of food. With rumors of gold and diamonds in the interior, South Africa could become the richest African colony."
    MAL_FLAVOR_TEXT: "Made rich by the gold mines and salt trade, Mali is the foremost power in Sub-Saharan Africa. This has made them a prime target by colonial powers looking to take it's wealth for their own. Mali is ill prepared to fight with it's inferior armies and internal strife. Can Mali reform and use it's wealth to help and protect it's people? Or will the greed of the few hurt the poor of the many?"
    br_alodia_FLAVOR_TEXT: "GENERIC_FLAVOR_TEXT$"
    br_makuria_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_venice_africa_company_FLAVOR_TEXT: "Built from trading posts along the African coast, the V.A.C is surrounded by untapped lands ripe for plantations. With demand for cash crops like Tea, Dyes, and Spices, the African trade companies are well positioned to profit immensely."
+   br_genonese_africa_company_FLAVOR_TEXT: "Built from trading posts along the African coast, the G.A.C is surrounded by untapped lands ripe for plantations. With demand for cash crops like Tea, Dyes, and Spices, the African trade companies are well positioned to profit immensely."
    
   # India
    JAS_FLAVOR_TEXT: "Almost all of India is now under the direct or indirect control of the Mughal Empire. The Nawabs of the princely states still exert a strong degree of rule over their territories. Will India ever be free from Mughal rule?"
@@ -149,7 +152,7 @@
    OMA_FLAVOR_TEXT: "Ruling over both Oman and Zanzibar, the Sultanate is establishing an intercontinental empire. Can Oman remain united?"
    PER_FLAVOR_TEXT: "At the center of the Silk Road Persia has grown wealthy beyond measure from the goods that follow to Europe and beyond. But all is not well, the trade is threatened by jealous powers like Tartaria and the Mughal Empire. Along with the threat from Arabia, can Persia maintain it's position as a Great Power or be swallowed by the mountains?"
    ARA_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_aegypt_FLAVOR_TEXT: "The breadbasket of Africa, Aigyptios exapnds it's holdings East into Asia in an attempt to gain a leg up in the struggle against the Basileía Romaíon. Will the land of ancient empires stand free, or be forced to kneel to their new Basileus?"
+   br_aegypt_FLAVOR_TEXT: "The breadbasket of Africa, Aigyptios expands it's holdings East into Asia in an attempt to gain a leg up in the struggle against the Basileía Romaíon. Will the land of ancient empires stand free, or be forced to kneel to their new Basileus?"
    
   # North America
    br_elysium_FLAVOR_TEXT: "Since it's independence, Elysium has been a shining beacon of opportunity by the Romaíoi world. With the influx of skilled laborers their borders expand East, causing conflict with other colonies. Can Elysium be economic powerhouse of the Americas or will they be divided and conquered by the Western colonial overlords?"
@@ -172,6 +175,7 @@
    CAH_FLAVOR_TEXT: "Surrounded by hostile colonial powers from all sides, the natives of the Americas must stand united. Can Cahokia modernize and industrialize to go toe to toe with the hostile powers, or will they be relegated to the museums of the world?"
    br_atlantica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_giamaica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_kykladia_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    
  GENERIC_FLAVOR_TEXT: "The industrial era is a time of great change; cultural, economic, scientific, social and more. As these changes accelerate, one can only wonder what the future will entail."
  REV_GENERIC_FLAVOR_TEXT: "Dissatisfied with the direction that the so-called organized government was taking, these revolutionaries have decided to take up arms to overthrow it. Will they succeed in seizing power or will they be crushed like so many forgotten revolutions of the past?"
