Various grefm integrations
- incorporated Corinth Canal, and Archaeology features from GotB still testing and tweaking.

--- a/localization/english/br_production_methods_l_english.yml
+++ b/localization/english/br_production_methods_l_english.yml
@@ -43,7 +43,7 @@
  br_pm_bureaucrat_building_palace_complex: "Bureaucratic Administration"
  br_pm_default_building_palace_complex: "Aristocratic Administration"
 
- ### GBBF Additions ####
+ ### GotB Additions ####
 
  ### buildings
  gbbf_building_corinth_canal: "Corinth Canal"
