--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -21,6 +21,8 @@
  ig_boyars: "Boyars"
  ig_boyars_desc: "#lore The old nobility.#!"
  ig_szlachta: "Szlachta"
+ ig_hussite_church: "Hussite Church"
+ ig_hussite_church_desc: "#lore The Hussite Church is a Christian denomination that originated in the Kingdom of Bohemia. It was founded by Jan Hus in the early 15th century. The Hussite Church was a precursor to the Protestant movement that would later sweep across Europe.#!"
  ig_szlachta_desc: "The Polish name for the traditional landowning nobility. The Szlachta, thanks to the Sejm and the Liberum Veto hold a large portion of the Commonwealth’s power. If any reforms are to be done, one must gain either their support or weaken their power.!"
  ig_mieszczanie: "Mieszczanie"
  ig_mieszczanie_desc: "The Polish name for the Burghers, or city-folk, of the Commonwealth. The Mieszczanie is mostly made up of the small business owners of the Nation. Thanks to the changing times, they have gained more political clout compared to the Middle Ages!"
