--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -27,14 +27,14 @@
 
   # Italy
    PAP_FLAVOR_TEXT: "Though the political power of the Catholic Church has waned over the centuries, the Pope still presides over the Papal States. Does faith still rule the hearts of men?"
-   TUS_FLAVOR_TEXT: "The unpopular Duke Leopoldo seeks to liberalize the Grand Duchy, but faces great opposition to his rule. How will Tuscany fare as liberalism and nationalism compete over the hearts and minds of Italians?"
+   TUS_FLAVOR_TEXT: "The unpopular Duke Leopoldo seeks to liberalize the Grand Duchy, but faces great opposition to his rule. How will Florence fare as liberalism and nationalism compete over the hearts and minds of Italians?"
    SIC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    PAR_FLAVOR_TEXT: "Parma sits in the heart of Italy, an area scarred by bloody wars by rich merchant familes. Surrounded by more powerful neighbors, they sit at a crossroads. Side with the merchant republics of Venice or Genoa in hopes of freedom, or stay with the monarch of Milan for protection from the richest men in the world?"
    LUC_FLAVOR_TEXT: "Lucca sits in the heart of Italy, an area scarred by bloody wars by rich merchant familes. Surrounded by more powerful neighbors, they sit at a crossroads. Side with the merchant republics of Venice or Genoa in hopes of freedom, or stay with the monarch of Milan for protection from the richest men in the world?"
    MOD_FLAVOR_TEXT: "Modena sits in the heart of Italy, an area scarred by bloody wars by rich merchant familes. Surrounded by more powerful neighbors, they sit at a crossroads. Side with the merchant republics of Venice or Genoa in hopes of freedom, or stay with the monarch of Milan for protection from the richest men in the world?"
    VEN_FLAVOR_TEXT: "With an expansive network of trade posts stretching from Atlanteum in the West to Kherson in the East, the trade flows to their shores with ease. The balance of Northern Italy shifts though, with a storm brewing between the big three powers; Genoa, Milan, and Venice. Will the Doge be able to navigate Venice through these turbulent times into a second golden age or plunge it into the swamps the city sits on?"
    LOM_FLAVOR_TEXT: "As the wealthiest of the Northern Italian states, Milan sits in a strong position wedged between hostile merchant republics and the Frankish kingdoms. A wave of liberalism has resulted in the expansion of voting rights and protection of assemblies. The people yearn for more, but King Aurelio faces a slipperly slope. If he gives too much, his son may rule over nothing more than an empty house."
-   br_genoa_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_genoa_FLAVOR_TEXT: "Genoa's trading empire stretches the globe, with colonies giving the nation access to the worlds markets. No amount of Chinese porcelin or Giamaican tobbacco could pay off their numerous enemies. Milan and Savoy bear down on their heartlands, while Florence eyes Pisa. Can Genoa keep business as usual? Or is their downfall nothing personal?"
    SAR_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
   
   # Germans
