Added Commonwealth Flavor Text
-Added unique flavor text for the Commonwealth and Prussia.
-Added semi-unique flavor text for Poltosk, Pskov, Turov-Pinsk, Kyiv, Chernigov, and Galicia-Volhynia.
-Fixed mistakes with the Tartaria flavor text

--- a/localization/english/replace/country_flavor_text_l_english.yml
+++ b/localization/english/replace/country_flavor_text_l_english.yml
@@ -64,14 +64,15 @@
    DEN_FLAVOR_TEXT: "The North Sea Empire attempts to keep its centralizing neighbors away from its valuable tributaries in the Americas and the profitable North Sea trade. With unrest rising with their subjects, will the Danes finally lose control of the Great Britain?"
  
   # Eastern Europe
-   PLC_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   PRU_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   PLC_FLAVOR_TEXT: "The Commonwealth stands on uneven ground. It's reformer king's health is ailing, allowing for nobles to exploit the kingdom for their own gain. A power vaccuum forming on their Eastern frontier threatens to spill over, while Sweden and Saxony seek new lands. Poland is not yet lost, for the Kings heir, Princess Jadwiga, is popular among the people, but she faces threats from within that could collapse the whole kingdom."
+   PRU_FLAVOR_TEXT: "Seperated from the other German nobility in the Baltic, Prussia remains the black sheep of the Commonwealth. Prince Friedrich yearns for the same freedom the Saxon kings hold, but the Polish grasp is still firm. An opportunity has arisen with the ailing Polish king. Can Prussia use this opportunity? Or will they remain a puppet forever?"
    br_novgorod_FLAVOR_TEXT: "Forgotten in the far North, the Republic of Novgorod bides it's time to finally break free from Swedish rule. But Novgorod isn't the only Russian state that's looking towards freedom. Can Novgorod break free and stomp out the Rurkid family before it's too late? Or are they destined to join the Russian Princes in gilded cages?"
-   br_polotsk_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_pskov_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_turov_pinsk_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_kiev_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_chernigov_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
+   br_polotsk_FLAVOR_TEXT: "Wedged between the rising Russian princes in the East and the centralizing Commonwealth in the West, Poltosk lives on borrowed time. One wrong step could mean their total distruction. If Poltosk wishes to survive the 18th century, it's rulers must carefully navigate the Eastern European political landscape."
+   br_pskov_FLAVOR_TEXT: "Wedged between the rising Russian princes in the East and the centralizing Commonwealth in the West, Pskov lives on borrowed time. One wrong step could mean their total distruction. If Pskov wishes to survive the 18th century, it's rulers must carefully navigate the Eastern European political landscape."
+   br_turov_pinsk_FLAVOR_TEXT: "Wedged between the rising Russian princes in the East and the centralizing Commonwealth in the West, Turov-Pinsk lives on borrowed time. One wrong step could mean their total distruction. If Turov-Pinsk wishes to survive the 18th century, it's rulers must carefully navigate the Eastern European political landscape."
+   br_kiev_FLAVOR_TEXT: "Wedged between the rising Russian princes in the East and the centralizing Commonwealth in the West, Kyiv lives on borrowed time. One wrong step could mean their total distruction. If Kyiv wishes to survive the 18th century, it's rulers must carefully navigate the Eastern European political landscape."
+   br_chernigov_FLAVOR_TEXT: "Wedged between the rising Russian princes in the East and the centralizing Commonwealth in the West, Chernigov lives on borrowed time. One wrong step could mean their total distruction. If Chernigov wishes to survive the 18th century, it's rulers must carefully navigate the Eastern European political landscape."
+   GAL_FLAVOR_TEXT: "Filled with a vocal Polish minority, Galica-Volhynia's chances of surviving the 18th century are slim. Even it's nobility is convinced they'd be better off within the Commonwealth. Despite this, it's peasantry share more in common with those in Kyiv than in Warszawa. If there is any hope to stay independent, perhaps Hungary would welcome them?"
    br_smolensk_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Smolensk finally sees it's chance for freedom. With Tartaria in decline, Muscovy will be vulnerable to us breaking free. United with the other princes, they may even be able to stand against Muscovy, but if they remain divided, they will all fall to Moscow."
    br_tver_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Tver finally sees it's chance for freedom. With Tartaria in decline, Muscovy will be vulnerable to us breaking free. United with the other princes, they may even be able to stand against Muscovy, but if they remain divided, they will all fall to Moscow."
    br_yaroslavl_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Yaroslavl finally sees it's chance for freedom. With Tartaria in decline, Muscovy will be vulnerable to us breaking free. United with the other princes, they may even be able to stand against Muscovy, but if they remain divided, they will all fall to Moscow."
@@ -81,7 +82,7 @@
    UBD_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    MOL_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    br_blacksea_colonies_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
-   br_tartaria_FLAVOR_TEXT: "Tartaria is a relic of a bygone era. Despite it's large military the state that runs it is rotten to the core. Slavery, corruption, and incompentcy runs rampanet in the horde brought to it's knees by the expansion East. The Commonwealth and it's subjects look to expand into Ukraine, while our puppet Duke in Muscovy is distancing themselves. Vultures circle over head, but Tartaria is not yet lost... right?"
+   br_tartaria_FLAVOR_TEXT: "Tartaria is a relic of a bygone era. Despite it's large military, the state that runs it is rotten to the core. Slavery, corruption, and incompetency runs rampant in the horde brought to it's knees by their expansion East. The Commonwealth and it's subjects look to expand into Ukraine, while our puppet Duke in Muscovy is distancing themselves. Vultures circle over head, but Tartaria is not yet lost... right?"
    br_muscovy_FLAVOR_TEXT: "Oppressed under the Tartar yolk for centuries, Muscovy finally sees it's chance for freedom. With Tartaria in decline, the Rurkid dynasty is poised to dominate their neighboring princes. United, they may even be able to stand against the Commonwealth, but if they remain divided, the only thing that will change is their master."
    br_taurica_FLAVOR_TEXT: "$GENERIC_FLAVOR_TEXT$"
    
