--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
- #Romaioi Basileía Romaíon
+ ### BR Misc ###
 
  #Interest Groups
- ig_orthodox_patriarch: "Klirikoí" #Eikoumenikó Patriarcheío Oikoumenikón Patriarkhión
- ig_orthodox_patriarch_desc: "#lore The Ecumenical Patriarchate of Konstantinopolis.#!"
+ ig_orthodox_patriarch: "Klirikoí"
+ ig_orthodox_patriarch_desc: "#lore The Klirikoí are the clergy of the Basileía Romaíon, who are responsible for the spiritual well-being of the empire's citizens. They are led by the Ecumenical Patriarch of Konstantinopolis, who is considered the highest-ranking bishop in the Orthodox Church. The Klirikoí are responsible for performing religious ceremonies, providing spiritual guidance, and overseeing the administration of the church.#!"
  ig_themata_patricians: "Dynatói" #Patricians Thémata Patrikíous
  ig_themata_patricians_desc: "#lore The Dynatói was a legal term in the Basileía Romaíon, denoting the senior levels of civil, military and ecclesiastic (including monastic) officialdom, who usually, but not always, also commanded considerable fortunes and landed estates. Although such positions were not intended to be hereditary, by the late 10th and early 11th centuries they had started to become monopolized by a limited number of families who by the mid-11th century formed a hereditary aristocracy.#!" #Patricians Thémata Patrikíous
  ig_tagmata_strategos: "Stratiótikoi" #Tagmata 
@@ -11,7 +11,7 @@
  ig_dianooumenoi: "Dianooúmenoi"
  ig_viomixanoi: "Viomíxanoi"
  ig_syndikalistai: "Syndikalistaí"
- ig_agrotikos: "Paroíkoi" #Paroíkoi Agrotikós
+ ig_agrotikos: "Paroíkoi" #Agrotikós
 
  ig_neo_hellenes: "Pántheon Anavíosi" #Néoi Éllines is a modern greek translation of New Hellenes
  ig_norse_priests: "Norse Priests"
@@ -44,7 +44,7 @@
 
  #ideology
  ideology_romaioi_patriarch: "The Ecumenical Patriarchate"
- ideology_romaioi_patriarch_desc: "#lore The Ecumenical Patriarch of Konstantinopolis.#!"
+ ideology_romaioi_patriarch_desc: "#lore The Ecumenical Patriarchate is the highest-ranking bishop in the Orthodox Church. The Patriarch of Konstantinopolis is considered the spiritual leader of the Basileía Romaíon, and is responsible for overseeing the administration of the church. The Patriarchate is responsible for performing religious ceremonies, providing spiritual guidance, and ensuring the spiritual well-being of the empire's citizens.#!"
  ideology_tagmata: "Tagmata"
  ideology_tagmata_desc: "#lore Tagmata are the elite military units of the Basileía Romaíon. They are organized into regiments, each with its own specialized role and equipment. The most prominent and powerful Tagmata are the Scholai, the Excubitors, and the Vigla. The Scholai are the imperial guard, responsible for protecting the Basileus and his family. The Excubitors are a heavy infantry unit, while the Vigla are a cavalry unit. The tagmata are typically composed of professional soldiers, and are considered the most elite and well-trained troops in the army. They are also among the best-paid soldiers in the empire.#!"
  ideology_romaioi_loyalist: "Loyalist"
